--- a/index.html
+++ b/index.html
@@ -6,9 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/normalize.min.css">
+    <link rel="stylesheet" href="css/fonts.css">
+
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="container">
+            <img src="icon/logo.png" alt="logo" class="header__logo">
+            <nav class="header__nav">
+                <a href="" class="header__nav-link">Home</a>
+                <a href="" class="header__nav-link">videos</a>
+                <a href="" class="header__nav-link">favorite subjects</a>
+                <a href="" class="header__nav-link">About us</span></a>
+            </nav>
+            <div class="header__reg">
+                <img src="icon/reg-ico.svg" alt="icon"class='headrer__reg-ico'></img>
+                <img src="icon/reg-ico-hover.svg" alt="icon"class='headrer__reg-ico hidden'></img>
+                register
+            </div>
+        </div>
+    </header>
 </body>
 </html>
