--- a/index.html
+++ b/index.html
@@ -10,22 +10,34 @@
 
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body>  
     <header class="header">
         <div class="container">
-            <img src="icon/logo.png" alt="logo" class="header__logo">
+            <a href="#"><img src="icon/logo.png" alt="logo" class="header__logo"></a>
             <nav class="header__nav">
-                <a href="" class="header__nav-link">Home</a>
-                <a href="" class="header__nav-link">videos</a>
-                <a href="" class="header__nav-link">favorite subjects</a>
-                <a href="" class="header__nav-link">About us</span></a>
+                <a href="#" class="header__nav-link">Home</a>
+                <a href="#" class="header__nav-link">videos</a>
+                <a href="#" class="header__nav-link">favorite subjects</a>
+                <a href="#" class="header__nav-link">About us</span></a>
             </nav>
             <div class="header__reg">
                 <img src="icon/reg-ico.svg" alt="icon"class='headrer__reg-ico'></img>
                 <img src="icon/reg-ico-hover.svg" alt="icon"class='headrer__reg-ico hidden'></img>
                 register
-            </div>
-        </div>
+            </div>   
+            <div class="gradient"></div>      
+        </div>      
     </header>
+    <div class="promo">
+        <div class="container">
+            <div class="promo__gradient"></div>
+        <div class="promo__item">
+            <h1 class="promo__title">Dr Learn World <span>Programming</span> Training Center!</h1>
+            <h3 class="promo__subtitle">With Dr Learn you can enjoy all the programming training!</h3>
+            <button class="btn btn_promo">Go to tutorials</button>
+            <button class="btn btn_w170">Pro version</button></div>
+        <div class="promo__img"><img src="img/promo_img.png" alt="promo_img"></div>
+        </div>
+    </div>
 </body>
 </html>
