Fitrs page end desctop

--- a/index.html
+++ b/index.html
@@ -39,5 +39,94 @@
         <div class="promo__img"><img src="img/promo_img.png" alt="promo_img"></div>
         </div>
     </div>
+    <div class="benefits">
+        <div class="benefits__gradient benefits__gradient_left"></div>
+        <div class="benefits__gradient benefits__gradient_right"></div>
+        <div class="container">   
+            <div class="benefits__item">
+                <div class="benefits__item-img">
+                    <img src="icon/teacher.png" alt="icon">
+                </div>
+                <div class="benefits__item-descr">
+                    best teachers
+                </div>
+            </div>
+            <div class="benefits__item">
+                <div class="benefits__item-img">
+                    <img src="icon/dollar-circle.png" alt="icon">
+                </div>
+                <div class="benefits__item-descr">
+                    low cost
+                </div>
+            </div>
+            <div class="benefits__item">
+                <div class="benefits__item-img">
+                    <img src="icon/monitor.png" alt="icon">
+                </div>
+                <div class="benefits__item-descr">
+                    easy to learn
+                </div>
+            </div>
+            <div class="benefits__item">
+                <div class="benefits__item-img">
+                    <img src="icon/monitor.png" alt="icon">
+                </div>
+                <div class="benefits__item-descr">
+                    easy to learn
+                </div>
+            </div>            
+        </div>     
+    </div>
+    <div class="tutorials">
+        <div class="container">
+            <h2 class="tutorials__title">Some of our tutorials
+                <img src="icon/star.png" alt="" class="tutorials__star">
+            </h2>           
+            <div class="tutorials__cards-box">
+                <div class="tutorial-card">
+                    <div class="tutorial-card__percent">20%</div>
+                    <div class="tutorial-card__img-box">
+                        <img src="img/react.png" alt="react" class="tutorial-card__img">
+                    </div>
+                    <div class="tutorial-card__descr">
+                        <div class="tutorial-card__text">
+                            <h3 class="tutorial-card__title">React js</h3>
+                            <div class="tutorial-card__price">35.10$</div>
+                        </div>
+                        <img src="img/foto.png" alt="foto" class="tutorial-card__foto">
+                        <button class="btn btn__tutorial-card">Buy</button>
+                    </div>
+                </div>
+                <div class="tutorial-card">
+                    <div class="tutorial-card__percent">10%</div>
+                    <div class="tutorial-card__img-box">
+                        <img src="img/js.png" alt="js" class="tutorial-card__img">
+                    </div>
+                    <div class="tutorial-card__descr">
+                        <div class="tutorial-card__text">
+                            <h3 class="tutorial-card__title">Java script</h3>
+                            <div class="tutorial-card__price">20.02$</div>
+                        </div>
+                        <img src="img/foto.png" alt="foto" class="tutorial-card__foto">
+                        <button class="btn btn__tutorial-card">Buy</button>
+                    </div>
+                </div>
+                <div class="tutorial-card">
+                    <div class="tutorial-card__percent">40%</div>
+                    <div class="tutorial-card__img-box">
+                        <img src="img/tailwind_css.png" alt="tailwind" class="tutorial-card__img">
+                    </div>
+                    <div class="tutorial-card__descr">
+                        <div class="tutorial-card__text">
+                            <h3 class="tutorial-card__title">Tailwind css</h3>
+                            <div class="tutorial-card__price">56$</div>
+                        </div>
+                        <img src="img/foto.png" alt="foto" class="tutorial-card__foto">
+                        <button class="btn btn__tutorial-card">Buy</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
