--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
         <div class="container">
             <a href="#"><img src="icon/logo.png" alt="logo" class="header__logo"></a>
-            <nav class="header__nav">
+            <nav class="header__nav header__nav_main">
                 <a href="#" class="header__nav-link">Home</a>
                 <a href="#" class="header__nav-link">videos</a>
                 <a href="#" class="header__nav-link">favorite subjects</a>
@@ -24,7 +24,20 @@
                 <img src="icon/reg-ico.svg" alt="icon"class='headrer__reg-ico'></img>
                 <img src="icon/reg-ico-hover.svg" alt="icon"class='headrer__reg-ico hidden'></img>
                 register
-            </div>   
+            </div> 
+            <div class="btn btn__menu">
+                menu    
+            </div>
+            <nav class="header__nav-mobile">   
+                <div class="header__nav-mobile-close">&times;</div>   
+                <a href="#" class="header__nav-link-mobile">Home</a>
+                <hr>
+                <a href="#" class="header__nav-link-mobile">videos</a>
+                <hr>
+                <a href="#" class="header__nav-link-mobile">favorite subjects</a>
+                <hr>
+                <a href="#" class="header__nav-link-mobile">About us</span></a>
+            </nav> 
             <div class="gradient"></div>      
         </div>      
     </header>
@@ -128,5 +141,6 @@
             </div>
         </div>
     </div>
+    <script src="js/script.js"></script>
 </body>
 </html>
