--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+        
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://alekseidiadiaev.github.io/dr_learn/">
+    <meta property="og:title" content="Dr Learn World Programming Training Center!">
+    <meta property="og:description" content="">
+    <meta property="og:image" content="">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://alekseidiadiaev.github.io/dr_learn/">
+    <meta property="twitter:title" content="Dr Learn World Programming Training Center!">
+    <meta property="twitter:description" content="">
+    <meta property="twitter:image" content="">
+    
+    <title>Dr. Learn</title>
+    <link rel="icon" href="./icon/favicon.ico">
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/fonts.css">
-
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>  
@@ -18,11 +30,11 @@
                 <a href="#" class="header__nav-link">Home</a>
                 <a href="#" class="header__nav-link">videos</a>
                 <a href="#" class="header__nav-link">favorite subjects</a>
-                <a href="#" class="header__nav-link">About us</span></a>
+                <a href="#" class="header__nav-link">About us</a>
             </nav>
             <div class="header__reg">
-                <img src="icon/reg-ico.svg" alt="icon"class='headrer__reg-ico'></img>
-                <img src="icon/reg-ico-hover.svg" alt="icon"class='headrer__reg-ico hidden'></img>
+                <img src="icon/reg-ico.svg" alt="icon" class='headrer__reg-ico'></img>
+                <img src="icon/reg-ico-hover.svg" alt="icon" class='headrer__reg-ico hidden'></img>
                 register
             </div> 
             <div class="btn btn__menu">
@@ -36,7 +48,7 @@
                 <hr>
                 <a href="#" class="header__nav-link-mobile">favorite subjects</a>
                 <hr>
-                <a href="#" class="header__nav-link-mobile">About us</span></a>
+                <a href="#" class="header__nav-link-mobile">About us</a>
             </nav> 
             <div class="gradient"></div>      
         </div>      
