--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 <a href="#" class="header__nav-link">About us</a>
             </nav>
             <div class="header__reg">
-                <img src="icon/reg-ico.svg" alt="icon" class='headrer__reg-ico'></img>
-                <img src="icon/reg-ico-hover.svg" alt="icon" class='headrer__reg-ico hidden'></img>
+                <img src="icon/reg-ico.svg" alt="icon" class='headrer__reg-ico'>
+                <img src="icon/reg-ico-hover.svg" alt="icon" class='headrer__reg-ico hidden'>
                 register
             </div> 
             <div class="btn btn__menu">
