--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://alekseidiadiaev.github.io/dr_learn/">
     <meta property="og:title" content="Dr Learn World Programming Training Center!">
-    <meta property="og:description" content="">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="./img/promo_img.png">
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://alekseidiadiaev.github.io/dr_learn/">
     <meta property="twitter:title" content="Dr Learn World Programming Training Center!">
-    <meta property="twitter:description" content="">
-    <meta property="twitter:image" content="">
+    <meta property="twitter:image" content="./img/promo_img.png">
     
     <title>Dr. Learn</title>
     <link rel="icon" href="./icon/favicon.ico">
